<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <ImageView
                    android:id="@+id/iv_public_inspectors_logo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    tools:src="@drawable/ic_public_inspectors_logo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:gravity="center|top"
                    android:orientation="vertical"
                    android:paddingBottom="30dp">

                    <Button
                        android:id="@+id/btn_driving_safety_act"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/ic_btn_background_rectangle"
                        android:padding="8dp"
                        android:text="@string/public_inspectors_btn_act" />

                    <Button
                        android:id="@+id/btn_driving_safety_checklist"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/ic_btn_background_rectangle"
                        android:padding="8dp"
                        android:text="@string/public_inspectors_btn_checklist" />

                    <Button
                        android:id="@+id/btn_driving_safety_provision"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/ic_btn_background_rectangle"
                        android:padding="8dp"
                        android:text="@string/public_inspectors_btn_provision" />

                    <Button
                        android:id="@+id/btn_driving_safety_toolkit"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/ic_btn_background_rectangle"
                        android:padding="8dp"
                        android:text="@string/public_inspectors_btn_toolkit" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</ScrollView>