<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_useful_links"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    tools:src="@drawable/ic_like" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:alpha="0.8"
                    android:text="@string/useful_links_dorprofzhel_title"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_useful_link_dorprofzhel_site"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_site" />

                <Button
                    android:id="@+id/btn_useful_link_dorprofzhel_vk"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_vk" />

                <Button
                    android:id="@+id/btn_useful_link_dorprofzhel_vk_ms"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="молодёжный совет" />

                <Button
                    android:id="@+id/btn_useful_link_dorprofzhel_instagram"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_instagram" />

                <Button
                    android:id="@+id/btn_useful_link_dorprofzhel_youtube"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_youtube" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:alpha="0.8"
                    android:text="@string/useful_links_rosprofzhel_title"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_useful_link_rosprofzhel_site"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_site" />

                <Button
                    android:id="@+id/btn_useful_link_rosprofzhel_vk"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_vk" />

                <Button
                    android:id="@+id/btn_useful_link_rosprofzhel_vk_ms"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="молодёжный совет" />

                <Button
                    android:id="@+id/btn_useful_link_rosprofzhel_instagram"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_instagram" />

                <Button
                    android:id="@+id/btn_useful_link_rosprofzhel_youtube"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="@string/useful_links_youtube" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:alpha="0.8"
                    android:text="НАШИ ДРУЗЬЯ"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_useful_link_vk_yong_rzd"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="молодёж западно-сибирской железной дороги" />

                <Button
                    android:id="@+id/btn_useful_link_vk_yong_omsk"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_btn_background_rectangle"
                    android:padding="8dp"
                    android:text="молодёж омского региона" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</ScrollView>